# mt3620_m4_software

./: README.md
MT3620_M4_BSP/: CMakeLists.txt
MT3620_M4_BSP/CMSIS/include/: irq.h
MT3620_M4_BSP/FreeRTOS/: CMakeLists.txt
MT3620_M4_BSP/mt3620/inc/: cirq_common.h  mem_util.h  mt3620.h  mt3620_cm4_hw_memmap.h  nvic.h  timer.h  type_def.h  vector_table.h
MT3620_M4_BSP/mt3620/src/: cirq_common.c  nvic.c  vector_table.c
MT3620_M4_Driver/: CMakeLists.txt
MT3620_M4_Driver/HDL/inc/: hdl_adc.h  hdl_dma.h  hdl_gpio.h  hdl_gpioif.h  hdl_gpt.h  hdl_i2c.h  hdl_i2s.h  hdl_mbox.h  hdl_spim.h  hdl_wdt.h
MT3620_M4_Driver/HDL/src/: hdl_adc.c  hdl_dma.c  hdl_gpioif.c  hdl_gpt.c  hdl_i2c.c  hdl_i2s.c  hdl_mbox.c  hdl_pwm.c  hdl_spim.c  hdl_wdt.c
MT3620_M4_Driver/MHAL/inc/: mhal.h  mhal_adc.h  mhal_dma.h  mhal_eint.h  mhal_gpio.h  mhal_gpioif.h  mhal_gpt.h  mhal_i2c.h  mhal_i2s.h  mhal_mbox.h  mhal_osai.h  mhal_pwm.h  mhal_spim.h  mhal_uart.h  mhal_wdt.h
MT3620_M4_Driver/MHAL/src/: mhal_adc.c  mhal_dma.c  mhal_gpio.c  mhal_gpioif.c  mhal_gpt.c  mhal_i2c.c  mhal_i2s.c  mhal_mbox.c  mhal_osai.c  mhal_pwm.c  mhal_spim.c  mhal_wdt.c
MT3620_M4_Sample_Code/BareMetal/MT3620_RTApp_BareMetal_GPIO/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  linker.ld  main.c
MT3620_M4_Sample_Code/BareMetal/MT3620_RTApp_BareMetal_HelloWorld/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  linker.ld  main.c
MT3620_M4_Sample_Code/BareMetal/MT3620_RTApp_BareMetal_MBOX/: README.md
MT3620_M4_Sample_Code/BareMetal/MT3620_RTApp_BareMetal_MBOX/HLApp/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  launch.vs.json  main.c
MT3620_M4_Sample_Code/BareMetal/MT3620_RTApp_BareMetal_MBOX/RTAppA/: CMakeLists.txt  app_manifest.json  launch.vs.json  main.c
MT3620_M4_Sample_Code/BareMetal/MT3620_RTApp_BareMetal_MBOX/RTAppB/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  main.c
MT3620_M4_Sample_Code/BareMetal/OS_HAL/inc/: os_hal_adc.h  os_hal_eint.h  os_hal_gpio.h  os_hal_gpioif.h  os_hal_gpt.h  os_hal_i2c.h  os_hal_i2s.h  os_hal_pwm.h  os_hal_spim.h  os_hal_uart.h  os_hal_wdt.h
MT3620_M4_Sample_Code/BareMetal/OS_HAL/src/: os_hal_adc.c  os_hal_dma.c  os_hal_eint.c  os_hal_gpioif.c  os_hal_gpt.c  os_hal_i2c.c  os_hal_i2s.c  os_hal_pwm.c  os_hal_spim.c  os_hal_uart.c  os_hal_wdt.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_ADC/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_Arducam/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  arducam_driver.c  arducam_driver.h  main.c  ov2640_regs.h
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_Arducam_ILI9341/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_Arducam_ILI9341/arducam_driver/: arducam_driver.c  arducam_driver.h
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_Arducam_ILI9341/ili9341_driver/: font.c  font.h  ili9341.c  ili9341.h  ili9341_ll.c  ili9341_ll.h  text.c  text.h
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_Arducam_ILI9341/jpeg_decoder/: tjpgd.h
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_C++/: AzureSphereRTCoreToolchainVFPCpp.cmake  CMakeLists.txt  DigitalOut.cpp  DigitalOut.h  app_manifest.json  main.cpp
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_CPP/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  linker.ld  main.cpp  startup.cpp
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_DMA/: CMakeLists.txt  README.md  app_manifest.json  linker.ld  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_EINT/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_GPIO/: CMakeLists.txt  README.md  app_manifest.json  linker.ld  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_GPIOIF/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_GPT/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2C/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2C_Accelerometer/: CMakeLists.txt  README.md  app_manifest.json  lsm6dso_driver.c  lsm6dso_driver.h  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_I2S/: AzureSphereRTCoreToolchainMTK.cmake  CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_LP/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_MBOX/: README.md
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_MBOX/HLApp/: CMakeLists.txt  CMakeSettings.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_MBOX/RTAppA/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_MBOX/RTAppB/: CMakeLists.txt  README.md  app_manifest.json  launch.vs.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_PWM/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_SPIM/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_UART/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/FreeRTOS/MT3620_RTApp_FreeRTOS_WDT/: CMakeLists.txt  README.md  app_manifest.json  main.c
MT3620_M4_Sample_Code/OS_HAL/src/: os_hal_gpioif.c  os_hal_lp.c  os_hal_mbox_shared_mem.c
Sample_Code/BareMetal/MT3620_RTApp_BareMetal_GPIO/: CMakeLists.txt  README.md  main.c  mt3620-gpio.c  os_hal_gpio.c  os_hal_gpio.h
Sample_Code/BareMetal/MT3620_RTApp_BareMetal_HelloWorld/: CMakeLists.txt  README.md  app_manifest.json  main.c  os_hal_uart.c  os_hal_uart.h
(+26 files in other folders)
